crates/engine/src/parser/snapshots/engine__parser__oracle_replacement__snapshot_tests__replacement_enters_tapped.snap
---
source: crates/engine/src/parser/oracle_replacement.rs
expression: def
---
{
  "event": "Moved",
  "execute": {
    "kind": "Spell",
    "effect": {
      "type": "Tap",
      "target": {
        "type": "SelfRef"
      }
    },
    "cost": null,
    "sub_ability": null,
    "duration": null,
    "description": null,
    "target_prompt": null,
    "condition": null,
    "optional_targeting": false,
    "optional": false,
    "forward_result": false
  },
  "mode": {
    "type": "Mandatory"
  },
  "valid_card": {
    "type": "SelfRef"
  },
  "description": "~ enters the battlefield tapped.",
  "condition": null
}
