crates/engine/src/parser/snapshots/engine__parser__oracle_replacement__snapshot_tests__replacement_explore_scry_prelude_creature.snap
---
source: crates/engine/src/parser/oracle_replacement.rs
expression: def
---
{
  "event": "Explore",
  "execute": {
    "kind": "Spell",
    "effect": {
      "type": "Scry",
      "count": {
        "type": "Fixed",
        "value": 1
      },
      "target": {
        "type": "Controller"
      }
    },
    "cost": null,
    "sub_ability": null,
    "duration": null,
    "description": null,
    "target_prompt": null,
    "condition": null,
    "optional_targeting": false,
    "optional": false,
    "forward_result": false
  },
  "mode": {
    "type": "Mandatory"
  },
  "valid_card": {
    "type": "Typed",
    "type_filters": [
      "Creature"
    ],
    "controller": null,
    "properties": []
  },
  "description": "If a creature would explore, instead you scry 1, then that creature explores.",
  "condition": null
}
