crates/engine/src/parser/snapshots/engine__parser__oracle_replacement__snapshot_tests__replacement_prevent_all_combat_damage.snap
---
source: crates/engine/src/parser/oracle_replacement.rs
expression: def
---
{
  "event": "DamageDone",
  "execute": null,
  "mode": {
    "type": "Mandatory"
  },
  "valid_card": null,
  "description": "Prevent all combat damage that would be dealt to you.",
  "condition": null,
  "damage_target_filter": {
    "Player": {
      "player": {
        "type": "Controller"
      }
    }
  },
  "combat_scope": "CombatOnly",
  "shield_kind": {
    "Prevention": {
      "amount": "All"
    }
  }
}
